--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 description = 'Procesos Especiales'
-version = '1.1'
+version = '1.2'
 
 apply plugin: 'java'
 apply plugin:'application'
@@ -13,6 +13,9 @@ repositories {
 
 dependencies {
   compile 'org.fxmisc.richtext:richtextfx:0.9.2'
+  compile 'org.apache.httpcomponents:httpclient:4.5.6'
+  compile 'com.fasterxml.jackson.core:jackson-databind:2.9.8'
+  
 }
 
 sourceSets {
