--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,9 @@ repositories {
 
 dependencies {
   compile 'org.fxmisc.richtext:richtextfx:0.10.2'
-  compile 'org.apache.httpcomponents:httpclient:4.5.6'
+  compile 'org.apache.httpcomponents:httpclient:4.5.13'
+  compile 'org.apache.httpcomponents:httpcore:4.4.13'
+  compile 'com.auth0:java-jwt:3.11.0'
   compile 'com.fasterxml.jackson.core:jackson-databind:2.9.8'
   compile group: 'org.apache.poi', name: 'poi', version: '4.1.0'
 }
